update xem chi tiet san pham

--- a/pages/Mobile/infor-mobile/galaxyZFlip3.html
+++ b/pages/Mobile/infor-mobile/galaxyZFlip3.html
@@ -161,23 +161,23 @@
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link adress" href="../../address.html">
-                        <i class="ti-location-arrow"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
                         địa chỉ
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
                     <a class="nav-link" href="#">
-                        <i class="ti-search"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="ti-shopping-cart"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </li>
                 <div class="phone-number">
                     <a class="nav-link" href="#">
-                        <i class="ti-mobile"></i>
+                        <i class="fa-solid fa-phone"></i>
                         1800 4886
                     </a>
                 </div>
@@ -556,17 +556,111 @@
 
             <div class="cost-product">
                 <div class="name-product">
-                    <p  style="font-size: 30px; font-weight:500">Galaxy Z Flip3 5G - (SM-F711)</p>
+                    <p style="font-size: 30px; font-weight:500">Galaxy Z Flip3 5G - (SM-F711)</p>
                 </div>
 
                 <div class="sale-product">
-                    <div class="old-cost" >
-                        <p  style="font-size: 30px; font-weight:500">24.990.000₫</p>
+                    <div class="old-cost">
+                        <p style="font-size: 30px; font-weight:500">24.990.000₫</p>
                     </div>
 
                     <div class="new-cost">
-                        <p  style="font-size: 30px; font-weight:500">16.990.000₫</p>
+                        <p style="font-size: 30px; font-weight:500">16.990.000₫</p>
                     </div>
+                </div>
+                <div class="choose-color">
+                    <p>Chọn màu sắc: </p>
+                    <div class="list-colors">
+                        <button class="btn-color" style="background-color: #e5dfc8;"></button>
+                        <button class="btn-color" style="background-color: #c2b1d7;"></button>
+                        <button class="btn-color" style="background-color: #2e2a27;"></button>
+                        <button class="btn-color" style="background-color: #344b46;"></button>
+                    </div>
+                    <p>Chọn dung lượng: </p>
+                    <div class="list-colors">
+                        <button class="btn-ram" style="">
+                            128GB|8GB
+                        </button>
+
+                        <button class="btn-ram" style="">
+                            256GB|8GB
+                        </button>
+                    </div>
+
+                    <div class="how-many">
+                        <input class="number-ric" type="number">
+                        <button class="add-cart">Thêm vào giỏ hàng</button>
+                    </div>
+
+                    <div class="promotion">
+                        <div class="gift-promotion">
+                            <i class="fa-solid fa-gift"></i>
+                            <p style="text-transform:uppercase;margin-left: 14px; font-weight: 550;">Quà khuyến mãi</p>
+                        </div>
+                        <div class="text-promotion">
+                            <div class="item-one">
+                                <i class="fa-brands fa-galactic-republic star-item"></i>
+                                <p class="text-item">Ưu đãi thanh toán:</p>
+                            </div>
+
+                            <div class="content-item">
+                                <p>
+                                    1. Thanh toán qua <strong>QR-VNPAY</strong> giảm thêm tới <strong>500.000đ </strong>
+                                    <cite> <a href="#">(Chi tiết). </a> </cite> <br>
+                                    2. Hỗ trợ trả góp <strong>0%</strong> qua thẻ tín dụng <cite>(Áp dụng với 1 số ngân
+                                        hàng có trong danh sách). </cite><br>
+                                    3. Hỗ trợ trả góp qua nhiều ngân hàng.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="text-promotion">
+                            <div class="item-one">
+                                <i class="fa-brands fa-galactic-republic star-item"></i>
+                                <p class="text-item">Ưu đãi mua chung:</p>
+                            </div>
+
+                            <div class="content-item">
+                                <p>
+                                    1. Giảm <strong>30%</strong> gói <strong> Care+ 1</strong> năm chỉ còn <strong>
+                                        2.500.000đ.</strong>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="text-promotion">
+                            <div class="item-one">
+                                <i class="fa-brands fa-galactic-republic star-item"></i>
+                                <p class="text-item">Ưu đãi tiêu dùng:</p>
+                            </div>
+
+                            <div class="content-item">
+                                <p>
+                                    1. Gói dịch vụ ưu tiên cao cấp và phòng chờ hạng thương gia <cite> <a href="#">(Chi
+                                            tiết). </a> </cite> <br>
+                                    2. Tặng <strong> SIM Mobilefone</strong> miễn phí <strong> 2GB/ngày </strong> truy
+                                    cập Internet <br>
+                                    <cite> (Áp dụng khi mua trực tiếp tại các cửa hàng Hồ Chí Minh – Số lượng có
+                                        hạn).</cite><br>
+                                    3. Tặng bao da <strong> Galaxy Z Flip3 </strong> <cite>(EF-VF711LYEGWW)</cite>.
+                                </p>
+                            </div>
+
+                            <div class="choose-store">
+                                <h3>Tìm cửa hàng gần nhất</h3>
+                                <!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
+                                <div class="custom-select" style="width:500px;">
+                                    <select>
+                                        <option value="0">Toàn quốc</option>
+                                        <option value="1">Hà nội</option>
+                                        <option value="2">Tp Hồ Chí Minh</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -706,6 +800,88 @@
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
     <script src="../../../js/jas.js"></script>
+
+    <!-- combox choose stores -->
+    <script>
+        var x, i, j, l, ll, selElmnt, a, b, c;
+        /*look for any elements with the class "custom-select":*/
+        x = document.getElementsByClassName("custom-select");
+        l = x.length;
+        for (i = 0; i < l; i++) {
+            selElmnt = x[i].getElementsByTagName("select")[0];
+            ll = selElmnt.length;
+            /*for each element, create a new DIV that will act as the selected item:*/
+            a = document.createElement("DIV");
+            a.setAttribute("class", "select-selected");
+            a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+            x[i].appendChild(a);
+            /*for each element, create a new DIV that will contain the option list:*/
+            b = document.createElement("DIV");
+            b.setAttribute("class", "select-items select-hide");
+            for (j = 1; j < ll; j++) {
+                /*for each option in the original select element,
+                create a new DIV that will act as an option item:*/
+                c = document.createElement("DIV");
+                c.innerHTML = selElmnt.options[j].innerHTML;
+                c.addEventListener("click", function (e) {
+                    /*when an item is clicked, update the original select box,
+                    and the selected item:*/
+                    var y, i, k, s, h, sl, yl;
+                    s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+                    sl = s.length;
+                    h = this.parentNode.previousSibling;
+                    for (i = 0; i < sl; i++) {
+                        if (s.options[i].innerHTML == this.innerHTML) {
+                            s.selectedIndex = i;
+                            h.innerHTML = this.innerHTML;
+                            y = this.parentNode.getElementsByClassName("same-as-selected");
+                            yl = y.length;
+                            for (k = 0; k < yl; k++) {
+                                y[k].removeAttribute("class");
+                            }
+                            this.setAttribute("class", "same-as-selected");
+                            break;
+                        }
+                    }
+                    h.click();
+                });
+                b.appendChild(c);
+            }
+            x[i].appendChild(b);
+            a.addEventListener("click", function (e) {
+                /*when the select box is clicked, close any other select boxes,
+                and open/close the current select box:*/
+                e.stopPropagation();
+                closeAllSelect(this);
+                this.nextSibling.classList.toggle("select-hide");
+                this.classList.toggle("select-arrow-active");
+            });
+        }
+        function closeAllSelect(elmnt) {
+            /*a function that will close all select boxes in the document,
+            except the current select box:*/
+            var x, y, i, xl, yl, arrNo = [];
+            x = document.getElementsByClassName("select-items");
+            y = document.getElementsByClassName("select-selected");
+            xl = x.length;
+            yl = y.length;
+            for (i = 0; i < yl; i++) {
+                if (elmnt == y[i]) {
+                    arrNo.push(i)
+                } else {
+                    y[i].classList.remove("select-arrow-active");
+                }
+            }
+            for (i = 0; i < xl; i++) {
+                if (arrNo.indexOf(i)) {
+                    x[i].classList.add("select-hide");
+                }
+            }
+        }
+        /*if the user clicks anywhere outside the select box,
+        then close all select boxes:*/
+        document.addEventListener("click", closeAllSelect);
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
