--- a/pages/Mobile/galaxyZ.html
+++ b/pages/Mobile/galaxyZ.html
@@ -154,23 +154,23 @@
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link adress" href="../address.html">
-                        <i class="ti-location-arrow"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
                         địa chỉ
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
                     <a class="nav-link button-search" href="#">
-                      <i class="ti-search"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="ti-shopping-cart"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </li>
                 <div class="phone-number">
                     <a class="nav-link" href="#">
-                        <i class="ti-mobile"></i>
+                        <i class="fa-solid fa-phone"></i>
                         1800 4886
                     </a>
                 </div>
@@ -496,7 +496,7 @@
     </div>
 
     <div class="lists-phone show-search">
-        <a href="">
+        <a href="./infor-mobile/galaxyZFlip3.html">
 
             <div class="list-phone">
                 <div class="img-phone text-center">
