--- a/pages/Tablet/tabS.html
+++ b/pages/Tablet/tabS.html
@@ -154,23 +154,23 @@
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link adress" href="../address.html">
-                        <i class="ti-location-arrow"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
                         địa chỉ
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
                     <a class="nav-link button-search" href="#">
-                      <i class="ti-search"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="ti-shopping-cart"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </li>
                 <div class="phone-number">
                     <a class="nav-link" href="#">
-                        <i class="ti-mobile"></i>
+                        <i class="fa-solid fa-phone"></i>
                         1800 4886
                     </a>
                 </div>
@@ -178,11 +178,12 @@
         </div>
     </div>
 
-    <div class="form-search"style="background-color: rgba(0,0,0,0.8);" >            
+    <div class="form-search" style="background-color: rgba(0,0,0,0.8);">
         <form class="example text-name" action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search" class="input" style="color:#fff ;background-color: transparent;border: none;">
-          <button type="submit"></button>
-        
+            <input type="text" placeholder="Search.." name="search" class="input"
+                style="color:#fff ;background-color: transparent;border: none;">
+            <button type="submit"></button>
+
         </form>
     </div>
     <!-- tabs control -->
