update xem chi tiet

--- a/pages/Mobile/infor-mobile/galaxyZFlip3.html
+++ b/pages/Mobile/infor-mobile/galaxyZFlip3.html
@@ -695,6 +695,326 @@
         });
     </script>
 
+
+    <div class="society">
+        <div class="society-nav">
+            <div class="describe item-society">
+                Mô tả
+            </div>
+
+            <div class="comment-fb item-society">
+                <i class="fa-brands fa-facebook-f"></i>
+                Thỏa luận
+            </div>
+
+            <div class="judge item-society">
+                <i class="ti-star"></i>
+                Đánh giá
+            </div>
+
+            <div class="parameter item-society">
+                Thông số kỹ thuật
+            </div>
+        </div>
+    </div>
+
+    <div class="content-describe ">
+
+        <!-- Mô tả 1 -->
+        <h2 class="text-center" style="font-size: 40px;">
+            Thiết kế thời thượng đầy lôi cuốn</h2>
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px">Chất "Tôi" khác biệt</h3>
+                <p style="font-size:20px;">Khác biệt với những gam màu độc đáo hay táo bạo với sắc đen mạnh mẽ? Ở màu
+                    sắc nào, Galaxy Z Flip3 5G đầy thu hút. Đâu là sắc màu bạn chọn?</p>
+            </div>
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_1-copy.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="item-describe" style="margin-left:4%;">
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_2-copy.jpg" alt="">
+            </div>
+            <div class="text-item-describe" style="margin-right:4%;">
+                <h3 style="font-size:36px;">Sở hữu thiết kế độc nhất theo phong cách của bạn</h3>
+                <p style="font-size:20px;">Chút điểm tô cho cái "tôi" thêm phần khác biệt? Khám phá ngay màu sắc độc
+                    quyền tại Samcenter.vn</p>
+            </div>
+        </div>
+
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px; text-align: center;">Vừa gọn trong túi</h3>
+                <p style="font-size:20px;">Nằm gọn trong túi siêu phẩm di động với màn hình gập mở độc đáo. Đóng lại bạn
+                    có một phụ kiện công nghệ vừa vặn mọi ngăn túi với kích thước 4.2-inch. Mở ra bạn có một chiếc điện
+                    thoại thông minh phá vỡ mọi giới hạn.</p>
+            </div>
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_3-copy.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="item-describe" style="margin-left:4%;">
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_4-copy.jpg" alt="">
+            </div>
+            <div class="text-item-describe" style="margin-right:4%;">
+                <h3 style="font-size:36px; text-align: center;">
+                    Trải nghiệm chưa từng có với <br>
+                    màn hình ngoài cực đỉnh</h3>
+                <p style="font-size:20px;">Chút điểm tô cho cái "tôi" thêm phần khác biệt? Khám phá ngay màu sắc độc
+                    quyền tại Samcenter.vn</p>
+            </div>
+        </div>
+
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px; text-align: center;">Tâm điểm đột phá đầy lôi cuốn</h3>
+                <p style="font-size:20px;">Cuộn lướt mượt mà với Màn hình chính 120Hz để bạn luôn bắt kịp xu hướng và
+                    theo dòng sự kiện. Tính năng tối ưu hóa tần số quét theo nội dung xem cho trải nghiệm thêm mãn nhãn.
+                    Sở hữu công nghệ Dynamic AMOLED 2X, Galaxy Z Flip3 5G mở ra thế giới giải trí chuẩn điện ảnh và sống
+                    động nhất trên Galaxy Z.</p>
+            </div>
+            <div class="img-item-describe" style="margin-left:4%;">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/Feature1_969x488-1.jpg" alt="">
+            </div>
+        </div>
+
+        <!-- Mô tả 2 -->
+        <h2 class="text-center" style="font-size: 40px;">
+            Thay đổi cách bạn chụp ảnh</h2>
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px; text-align: center; ">Selfie với màn hình ngoài</h3>
+                <p style="font-size:20px;">Selfie đầy mới lạ cùng Bộ Đôi Camera Sau ngay trên Màn hình ngoài chưa bao
+                    giờ tiện lợi đến thế. Chọn góc chụp, bấm máy và xem ảnh dễ dàng khi ấn nút âm lượng. Tất cả đều diễn
+                    ra không cần mở máy.</p>
+            </div>
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_5-copy.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="item-describe" style="margin-left:4%;">
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_9-copy.jpg" alt="">
+            </div>
+            <div class="text-item-describe" style="margin-right:4%;">
+                <h3 style="font-size:36px;">Chỉ cần chọn góc và sẵn sàng tỏa sáng</h3>
+                <p style="font-size:20px;">Bắt trọn mọi khoảnh khắc với Chụp Một Chạm cải tiến. 10 Chọn chế độ gập mở
+                    linh hoạt Flex Mode, bạn có thể chụp ảnh và quay phim cùng một lúc với nhiều góc độ mới lạ đầy sáng
+                    tạo.</p>
+            </div>
+        </div>
+
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px; text-align: center;">Chọn góc. Cố định máy. Quay</h3>
+                <p style="font-size:20px;">Tạm biệt những video rung lắc hay phụ kiện rườm rà. Chế độ Flex Mode cho phép
+                    Galaxy Z Flip3 5G "đứng vững" trên bề mặt phẳng, giúp bạn luôn sẵn sàng ghi trọn những thước phim ấn
+                    tượng.</p>
+            </div>
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_6-copy.jpg" alt="">
+            </div>
+        </div>
+
+        <!-- Mô tả 3 -->
+        <h2 class="text-center" style="font-size: 40px;">
+            Công nghệ gập đột phá</h2>
+        <div class="item-describe">
+            <div class="text-item-describe" style="margin-left:4%;">
+                <h3 style="font-size:36px; text-align: center; ">Điện thoại bị ướt ư? Đừng lo</h3>
+                <p style="font-size:20px;">Thỏa sức sáng tạo với chiếc điện thoại gập thông minh kháng nước đầu tiên trên thế giới, với chuẩn IPX8.16 IPX8 giúp điện thoại có khả năng chịu đựng ở độ sâu 1,5 mét, tối đa 30 phút trong môi trường nước.</p>
+            </div>
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_7-copy.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="item-describe" style="margin-left:4%;">
+            <div class="img-item-describe">
+                <img src="../../../img/phone/infor-phone/GalaxyZFlip3_5G/969x488_8-copy.jpg" alt="">
+            </div>
+            <div class="text-item-describe" style="margin-right:4%;">
+                <h3 style="font-size:36px; text-align: center;">Được thiết kế để phá vỡ mọi giới hạn - Thoải mái gập mở</h3>
+                <p style="font-size:20px;">Khả năng chống trầy và rơi vỡ ưu việt đã có trên Galaxy Z Flip3 5G. Màn hình ngoài của siêu phẩm được trang bị lớp kính Gorilla Glass bền bỉ nhất trên dòng điện thoại Galaxy Z mang tên Corning® Gorilla® Glass Victus™. Với khung viền hợp kim nhôm aluminum chắc chắn, sự quyến rũ của Galaxy Z Flip3 5G không chỉ dừng lại ở vẻ đẹp mà còn là độ bền đáng ngưỡng mộ. Giờ đây, trải nghiệm gập mở trở nên thoải mái hơn bao giờ hết, cho bạn thỏa sức thực hiện mọi thao tác.</p>
+            </div>
+        </div>
+
+
+        <div class="comment-now">
+            <div class="fb-comments"
+                data-href="https://www.facebook.com/plugins/feedback.php?app_id=717577456086848&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df21698c810e2e1c%26domain%3Dsamcenter.vn%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fsamcenter.vn%252Ff396f8b3920f5f%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fsamcenter.vn%2F%3Fp%3D40&amp;locale=en_US&amp;numposts=5&amp;order_by=reverse_time&amp;sdk=joey&amp;version=v2.10&amp;width"
+                data-width="" data-numposts="5"></div>
+        </div>
+
+    </div>
+
+    <div class="input-comment">
+        <div class="fb-comments"
+            data-href="https://www.facebook.com/plugins/feedback.php?app_id=717577456086848&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df21698c810e2e1c%26domain%3Dsamcenter.vn%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fsamcenter.vn%252Ff396f8b3920f5f%26relation%3Dparent.parent&amp;container_width=0&amp;height=100&amp;href=https%3A%2F%2Fsamcenter.vn%2F%3Fp%3D40&amp;locale=en_US&amp;numposts=5&amp;order_by=reverse_time&amp;sdk=joey&amp;version=v2.10&amp;width"
+            data-width="" data-numposts="5"></div>
+    </div>
+
+    <div class="content-judge">
+        <h3 class="text-judge">Đánh giá sản phẩm: Galaxy Z Flip3 5G - (SM-F711) </h3>
+        <div class="star-judge">
+            <p>0.0/5</p>
+            <ul class="stars">
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
+            </ul>
+        </div>
+        <div class="comment-judge">
+
+            <p>Sản phẩm chưa có đánh giá
+                <a href="#" style="text-decoration: none;">
+                    <i class="fa-solid fa-pen"></i>
+                    Viết đánh giá
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="more-parameter">
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th scope="row">Công nghệ màn hình</th>
+                    <td>Dynamic AMOLED 2X</td>
+                </tr>
+                <tr>
+                    <th scope="row">Độ phân giải</th>
+                    <td>Full HD+ (1080 x 2640 Pixels)</td>
+                </tr>
+                <tr>
+                    <th scope="row">Độ sáng tối đa</th>
+                    <td>1200 nits</td>
+                </tr>
+                <tr>
+                    <th scope="row">Mặt kính cảm ứng</th>
+                    <td>Kính siêu mỏng Ultra Thin Glass (UTG)</td>
+                </tr>
+                <tr>
+                    <th scope="row">Camera sau</th>
+                    <td>3 camera 12MP</td>
+                </tr>
+                <tr>
+                    <th scope="row">Quay phim</th>
+                    <td>1200 nits</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tính năng camera sau</th>
+                    <td>AI Camera, Ban đêm (Night Mode), Chạm lấy nét, Chống rung quang học (OIS), Chuyên nghiệp (Pro),
+                        Góc rộng (Wide), Góc siêu rộng (Ultrawide), HDR, Làm đẹp, Lấy nét theo pha (PDAF), Nhận diện
+                        khuôn mặt, Quay chậm (Slow Motion), Quay Siêu chậm (Super Slow Motion), Tự động lấy nét (AF),
+                        Toàn cảnh (Panorama), Xóa phông</td>
+                </tr>
+                <tr>
+                    <th scope="row">Camera trước</th>
+                    <td>10 MP</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tính năng camera trước</th>
+                    <td>HDR, Làm đẹp, Nhận diện khuôn mặt, Quay video 4K, Quay video Full HD, Quay video HD, Tự động lấy
+                        nét (AF), Xóa phông</td>
+                </tr>
+                <tr>
+                    <th scope="row">Hệ điều hành</th>
+                    <td>Android 11</td>
+                </tr>
+                <tr>
+                    <th scope="row">Chip xử lý (CPU)</th>
+                    <td>Snapdragon 888 8 nhân</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tốc độ CPU</th>
+                    <td>1 nhân 2.84 GHz, 3 nhân 2.42 GHz & 4 nhân 1.8 GHz</td>
+                </tr>
+                <tr>
+                    <th scope="row">Chip đồ họa (GPU)</th>
+                    <td>Adreno 660</td>
+                </tr>
+                <tr>
+                    <th scope="row">Mạng di động</th>
+                    <td>Hỗ trợ 5G</td>
+                </tr>
+                <tr>
+                    <th scope="row">Số khe sim</th>
+                    <td>1 Nano SIM & 1 eSIM</td>
+                </tr>
+                <tr>
+                    <th scope="row">Wifi</th>
+                    <td>Dual-band (2.4 GHz/5 GHz), Wi-Fi 802.11 a/b/g/n/ac/ax, Wi-Fi Direct, Wi-Fi hotspot</td>
+                </tr>
+                <tr>
+                    <th scope="row">GPS</th>
+                    <td>A-GPS, BDS, GALILEO, GLONASS</td>
+                </tr>
+                <tr>
+                    <th scope="row">Bluetooth</th>
+                    <td>A2DP, LE, v5.1</td>
+                </tr>
+                <tr>
+                    <th scope="row">Cổng kết nối/sạc</th>
+                    <td>Type-C</td>
+                </tr>
+                <tr>
+                    <th scope="row">Kết nối khác</th>
+                    <td>NFC, OTG</td>
+                </tr>
+                <tr>
+                    <th scope="row">Loại pin</th>
+                    <td>Li-Ion , 3300 mAh</td>
+                </tr>
+                <tr>
+                    <th scope="row">Bảo mật nâng cao</th>
+                    <td>Mở khoá vân tay cạnh viền</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tính năng đặc biệt</th>
+                    <td>Âm thanh AKG, Ghi âm cuộc gọi, Samsung Pay</td>
+                </tr>
+                <tr>
+                    <th scope="row">Xem phim</th>
+                    <td>3GP, AVI, H.264(MPEG4-AVC), MP4, WMV</td>
+                </tr>
+                <tr>
+                    <th scope="row">Nghe nhạc</th>
+                    <td>AAC, AMR, FLAC, Midi, MP3, OGG, WAV, WMA</td>
+                </tr>
+                <tr>
+                    <th scope="row">Thiết kế:</th>
+                    <td>Nguyên khối</td>
+                </tr>
+                <tr>
+                    <th scope="row">Chất liệu:</th>
+                    <td>Khung nhôm & Mặt lưng kính cường lực</td>
+                </tr>
+                <tr>
+                    <th scope="row">Kích thước, khối lượng:</th>
+                    <td>183 g</td>
+                </tr>
+                <tr>
+                    <th scope="row">Thời điểm ra mắt: </th>
+                    <td>08/2021</td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0"
+        nonce="GFqqnQYX"></script>
     <!-- End content-->
 
     <!-- footer -->
@@ -800,6 +1120,7 @@
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
     <script src="../../../js/jas.js"></script>
+    <script src="../../../js/infor-phone.js"></script>
 
     <!-- combox choose stores -->
     <script>
