--- a/manage/account_manage.html
+++ b/manage/account_manage.html
@@ -32,7 +32,7 @@
                     <a href="./category_manage.html">Quản lý danh mục</a>
                 </li>
                 <li>
-                    <a href="/Website-SamCenter/index.html">Về trang chủ</a>
+                    <a href="/WebSamCenter/index.html">Về trang chủ</a>
                 </li>
             </div>
         </div>
@@ -46,7 +46,10 @@
                 <!-- <a href="./sua-dia-danh.html" class=" btn btn-danger mx-2">Xoá </a> -->
             </div>
             <div class="alert alert-success" id="ThongBao"></div>
-            <h2>Quản lý thông tin khách hàng</h2>
+            <div class="title">
+              <h2>Quản lý thông tin khách hàng</h2>
+          </div>
+            
             <table class="table">
                 <thead>
                   <tr>
