--- a/manage/category_manage.html
+++ b/manage/category_manage.html
@@ -46,7 +46,10 @@
                 <!-- <a href="./sua-dia-danh.html" class=" btn btn-danger mx-2">Xoá </a> -->
             </div>
             <div class="alert alert-success" id="ThongBao"></div>
-            <h2>Quản lý danh mục</h2>
+            <div class="title">
+                <h2>Quản lý danh mục</h2>
+            </div>
+            
             <table class="table">
                 <thead>
                   <tr>
@@ -118,7 +121,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">6</th>
                     <td>Giới thiệu</td>
                     <td>more_samcenter Thông tin</td>
                     <td>
@@ -130,7 +133,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">7</th>
                     <td>Khuyến mại</td>
                     <td>more_samcenter Thông tin</td>
                     <td>
@@ -142,7 +145,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">8</th>
                     <td>Hệ thống cửa hàng</td>
                     <td>more_samcenter Thông tin</td>
                     <td>
@@ -154,7 +157,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">9</th>
                     <td>Hướng dẫn mua hàng</td>
                     <td>more_samcenter Thông tin</td>
                     <td>
@@ -166,7 +169,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">10</th>
                     <td>Phương thức thanh toán</td>
                     <td>more_samcenter Thông tin</td>
                     <td>
@@ -190,7 +193,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">11</th>
                     <td>Chính sách bảo mật</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -202,7 +205,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">12</th>
                     <td>Chính sách hoạt động chung</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -214,7 +217,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">13</th>
                     <td>Chính sách trả góp</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -226,7 +229,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">14</th>
                     <td>Chính sách bảo hành</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -238,7 +241,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">15</th>
                     <td>Chính sách giao hàng</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -250,7 +253,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">16</th>
                     <td>Chính sách hủy GD-Hoàn tiền</td>
                     <td>more_samcenter Chính sách</td>
                     <td>
@@ -262,7 +265,7 @@
 
                   </tr>
                   <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">17</th>
                     <td>Giải quyết khiếu lại</td>
                     <td>more_samcenter Liên hệ</td>
                     <td>
